[gd_scene load_steps=2 format=3 uid="uid://ib110yvgyxsl"]

[ext_resource type="Script" path="res://Scripts/selection.gd" id="1_2s4sm"]

[node name="Selection" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 120
script = ExtResource("1_2s4sm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 60

[node name="TextContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BingoText" type="Label" parent="VBoxContainer/TextContainer"]
layout_mode = 2
text = "Bingo made in 5 minutes"

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RaidBoard" type="Button" parent="VBoxContainer/CenterContainer4"]
layout_mode = 2
text = "Use preset board (See if you like it)"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NewBoard" type="Button" parent="VBoxContainer/CenterContainer2"]
layout_mode = 2
text = "Create new bingo board"

[connection signal="pressed" from="VBoxContainer/CenterContainer4/RaidBoard" to="." method="_on_raid_board_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/NewBoard" to="." method="_on_new_board_pressed"]
